jomon/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jomon-backend
  labels:
    app.kubernetes.io/name: jomon-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: jomon-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jomon-backend
    spec:
      containers:
        - name: jomon-backend
          image: ghcr.io/traptitech/jomon:6b62e23d31ac28d28246ac16031877955c7ab601
          imagePullPolicy: Always
          ports:
            - containerPort: 1323
              name: http
