jomon/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jomon
  labels:
    app.kubernetes.io/name: jomon
spec:
  secutiryContext:
    runAsUser: 10000
    runAsNonRoot: true
  selector:
    matchLabels:
      app.kubernetes.io/name: jomon
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jomon
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - las211.tokyotech.org
              weight: 1

      containers:
        - name: jomon
          image: ghcr.io/traptitech/jomon:6b62e23d31ac28d28246ac16031877955c7ab601
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 1323
              name: http
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
