jomon/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jomon
spec:
  selector:
    app.kubernetes.io/name: jomon
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  type: ClusterIP
